feat: 菜单接口实现
