# server/middleware/casbin.go
@@ -1,7 +1,6 @@
 package middleware
 
 import (
-	"github.com/blkcor/gin-react-admin/config/section"
 	"github.com/blkcor/gin-react-admin/system"
 	"github.com/blkcor/gin-react-admin/utils/jwt"
 	"github.com/gin-gonic/gin"
@@ -15,7 +14,7 @@ func CasbinHandler() gin.HandlerFunc {
 		//获取请求方法
 		act := context.Request.Method
 		//角色应该从token解析出来，此处为了节约时间，写死了值
-		claim, err := jwt.ParseToken(context.GetHeader("Authorization"), section.AppConfig.AccessKey)
+		claim, err := jwt.GetClaimFromContext(context)
 		if err != nil {
 			context.JSON(http.StatusForbidden, gin.H{
 				"message": "无权限",
@@ -23,7 +22,7 @@ func CasbinHandler() gin.HandlerFunc {
 			context.Abort()
 			return
 		}
-		sub := claim.Role
+		sub := claim.RoleCode
 		//引入casbin
 		e := system.CasbinServiceApp.Casbin()
 		//判断策略是否存在
